# air_traffic_collision_avoidance_rl

./: .gitignore  README.md  hyperparam_tuner.py  main.py  main_ma.py  pyproject.toml
agents/: q_learning_agent.py
src/: airplane.py  edge.py  environment.py  ma_airplane.py  ma_environment.py  visualizer.py
utils/: normalizers.py  units.py
