[tool.poetry]
name = "ae43250 - bio-inspired intelligence"
version = "0.1.0"
description = ""
authors = ["David Hartong <davidahartong@gmail.com>"]
readme = "README.md"
package-mode=false

[tool.poetry.dependencies]
python = ">=3.10, <3.12"
numpy = "^1.26.4"
matplotlib = "^3.9.1"
pygame = "^2.6.0"
gymnasium = "^0.29.1"
stable-baselines3 = "^2.3.2"
tqdm = "^4.66.4"
rich = "^13.7.1"
optuna = "^3.6.1"
pettingzoo = "^1.24.3"
supersuit = "^3.9.2"
tensorboard = "^2.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
